--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -505,21 +505,14 @@ While wetter forests can prove quite resilient to such changes [@millerReducedIm
 Severe degradation impacts can cause dramatic ecological state changes (e.g., the transition from forest to more open, savanna-like vegetation in tropical forest regions through 'savannization') and non-linear threshold responses in energy balance and associated microclimates, with implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020].
 Such dynamics are likely to be amplified by warming temperatures, such that climate change is pushing some of the world's forests into alternative stable states wherein forest can persist as long as the canopy remains largely intact, but has dramatically reduced probability of recovering and persisting when affected by severe canopy disturbance [**REFS**, @tepley_vulnerability_2017; @miller_alternative_2019; @mcdowellPervasiveShiftsForest2020].
 
-Variation in resistance and resilience among forests may drive different trajectories in the face of global climate change. 
-For example, canopy trees of African rainforests appear to be more resilient to warming and drought than other tropical forests [@bennettResistanceAfricanTropical2021]. 
-Species with smaller leaves and larger $g_s$ will be less vulnerable to temperature increase than species with larger leaves [@fauset_differences_2018; @songTreeSurfaceTemperature2020] and isoprene emitting species will have a selective advantage in a warming world [@taylorCapacityEmitIsoprene2019]. 
-
-Canopy disturbance along with a trend towards younger forests and again reduced tree growth associated with warming [@mcdowellPervasiveShiftsForest2020] poses an increasing threat to the biodiversity of microrefugia that are otherwise buffered from climatic extremes [@scheffersMicrohabitatsReduceAnimal2013; @greiserHidingClimateCharacterizing2019]. 
+Canopy disturbance poses an increasing threat to the biodiversity of microrefugia that are otherwise buffered from climatic extremes [@scheffersMicrohabitatsReduceAnimal2013; @greiserHidingClimateCharacterizing2019]. 
 Canopy structure affects understory species composition, which has been shown to shift under warming and canopy disturbance [@majasalmiImpactTreeCanopy2020; @bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020]
-In the understory, warming is disproportionately affecting the less thermally-adapted plant species, resulting in associated plant community thermophilization [@zellwegerForestMicroclimateDynamics2020; @duqueThermophilizationAdultJuvenile2015; @greiserHidingClimateCharacterizing2019]. 
+In the understory, warming is disproportionately affecting the less thermally-adapted plant species, resulting in associated plant community thermophilization [@zellwegerForestMicroclimateDynamics2020; @duqueThermophilizationAdultJuvenile2015; @greiserHidingClimateCharacterizing2019].
+If such compositional shifts towards more thermally-adapted species fail to keep up with the pace of warming, the ecosystem-level resilience to canopy disturbance that is often provided by smaller trees [e.g., **REFS**, @millerReducedImpactLogging2011] will be destroyed, resulting in breakdown of canopy buffering and the potential state changes described above.
 
-
-
-*
-
-These shifts in forest structure at large may be detectable by lidar and thermal remote sensing. If we know how metabolism maps to the thermal profile, then the observed forest structural changes can inform prediction of forest function.
- 
 ## Scaling across space and time 
+
+As we have reviewed here, 
 
 ### Representing Vertical Gradients in Models
 
