--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -11412,6 +11412,23 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\2VGLP28X\\Xiang et al. - 2013 - Contrasting leaf trait scaling relationships in tr.pdf}
 }
 
+@article{xuForestDroughtResistance2018,
+  title = {Forest Drought Resistance Distinguished by Canopy Height},
+  author = {Xu, Peipei and Zhou, Tao and Yi, Chuixiang and Fang, Wei and Hendrey, George and Zhao, Xiang},
+  date = {2018-07-01},
+  journaltitle = {Environ. Res. Lett.},
+  volume = {13},
+  number = {7},
+  pages = {075003},
+  issn = {1748-9326},
+  doi = {10.1088/1748-9326/aacadd},
+  url = {https://iopscience.iop.org/article/10.1088/1748-9326/aacadd},
+  urldate = {2021-10-01},
+  abstract = {How are the survival and growth of trees under severe drought affected by their size? While some studies have shown that large trees are more vulnerable to drought than smaller trees, others found that small trees are the more vulnerable. We explored the potential relationships between canopy height and forest responses to drought indicated by tree mortality, tree ring width index (RWI), and normalized difference vegetation index (NDVI) in the southwestern United States (SWUS) in 2002. In that year many trees had zero tree ring growth due to mortality and dieback, presumably related to drought-stress. With RWI data from a tree ring data base and climate data co-located with the field measurements, we found size-dependent linear correlations between these forest responses and canopy height in SWUS under severe drought condition. During that drought period, both trunk growth (RWI) and leaf growth (NDVI) were positively correlated with canopy height of the smaller trees (less than 18 m) and negatively correlated with canopy height of greater than 18 m. Tree mortality was negatively correlated with canopy height up to 15 m. Both local-scale and regional-scale data are consistent in showing that forests with medium canopy height (around 18 meters) showed the greatest resistance to severe drought. We suggest that negative impacts of severe drought on forests could be modified with active management of canopy structure.},
+  langid = {english},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\GXWF42YG\\Xu et al. - 2018 - Forest drought resistance distinguished by canopy .pdf}
+}
+
 @article{xuHeatwaveEffectsGross2020,
   title = {Heatwave Effects on Gross Primary Production of Northern Mid-Latitude Ecosystems},
   author = {Xu, Hang and Xiao, Jingfeng and Zhang, Zhiqiang},
@@ -11794,10 +11811,6 @@
   abstract = {Ongoing global warming is causing phenological shifts that affect photosynthesis and growth rates in temperate woody species. However, the effects of seasonally uneven climate warming—as is occurring in much of Europe, where the winter/spring months are warming twice as fast than the summer/autumn months—on autumn growth cessation (completion of overwintering buds) and leaf senescence, and possible carry-over effects between phenophases, remain under-investigated. We conducted experiments in which we exposed saplings of canopy and understory species to 4~°C warming in winter/spring, summer/autumn, or all year to disentangle how the timing of bud break, bud set completion, and leaf senescence is affected by seasonally uneven warming. All-year warming led to significantly delayed leaf senescence, but advanced bud set completion; summer/autumn warming only delayed leaf senescence; and winter/spring warming advanced both bud set and senescence. The non-parallel effects of warming on bud completion and leaf senescence show that leaf senescence alone is an inadequate proxy for autumn growth cessation in trees and counterintuitively suggest that continued uneven seasonal warming will advance cessation of primary growth in autumn, even when leaf senescence is delayed. Phenological responses to warming treatments (earlier spring onset, later autumn senescence) were more than twice as high in understory species than in canopy species, which can partly be explained by the absence of carry-over effects among phenophases in the former group. This underscores the need to consider differences among plant functional types when forecasting the future behaviour of ecosystems.},
   langid = {english},
   file = {C\:\\Users\\Me\\Zotero\\storage\\K363X7KT\\Zohner and Renner - 2019 - Ongoing seasonally uneven climate warming leads to.pdf}
-}
-
-@misc{zotero-955,
-  type = {misc}
 }
 
 @article{zweifelMiddayStomatalClosure2002,
