--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -3964,7 +3964,7 @@
   title = {Climate Change Widespread, Rapid, and Intensifying – {{IPCC}} — {{IPCC}}},
   author = {IPCC},
   date = {2021},
-  url = {https://www.ipcc.ch/2021/08/09/ar6-wg1-20210809-pr/},
+  url = {https://www.ipcc.ch/report/ar6/wg1/downloads/report/IPCC_AR6_WGI_Full_Report.pdf},
   urldate = {2021-08-24},
   file = {C\:\\Users\\Me\\Zotero\\storage\\GWPYJKJG\\IPCC_AR6_WGI_Full_Report.pdf;C\:\\Users\\Me\\Zotero\\storage\\NNHQ9D5E\\IPCC_AR6_WGI_Full_Report.pdf;C\:\\Users\\Me\\Zotero\\storage\\QVS8HZLX\\ar6-wg1-20210809-pr.html}
 }
@@ -9082,6 +9082,24 @@
   keywords = {canopy position,daily water use,environmental factors,nightly water use,sap flux density,silver birch,transpiration,xylem sap flow},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/eco.133},
   file = {C\:\\Users\\Me\\Zotero\\storage\\GHTQ6E5V\\Sellin and Lubenets - 2010 - Variation of transpiration within a canopy of silv.pdf;C\:\\Users\\Me\\Zotero\\storage\\VF49ERI2\\eco.html}
+}
+
+@article{senfCanopyMortalityHas2018,
+  title = {Canopy Mortality Has Doubled in {{Europe}}’s Temperate Forests over the Last Three Decades},
+  author = {Senf, Cornelius and Pflugmacher, Dirk and Zhiqiang, Yang and Sebald, Julius and Knorn, Jan and Neumann, Mathias and Hostert, Patrick and Seidl, Rupert},
+  date = {2018-11-26},
+  journaltitle = {Nature Communications},
+  volume = {9},
+  number = {1},
+  pages = {4978},
+  publisher = {{Nature Publishing Group}},
+  issn = {2041-1723},
+  doi = {10.1038/s41467-018-07539-6},
+  url = {https://www.nature.com/articles/s41467-018-07539-6},
+  urldate = {2020-08-18},
+  abstract = {Mortality is a key indicator of forest health, and increasing mortality can serve as bellwether for the impacts of global change on forest ecosystems. Here we analyze trends in forest canopy mortality between 1984 and 2016 over more than 30 Mill. ha of temperate forests in Europe, based on a unique dataset of 24,000 visually interpreted spectral trajectories from the Landsat archive. On average, 0.79\% of the forest area was affected by natural or human-induced mortality annually. Canopy mortality increased by\,+2.40\% year–1, doubling the forest area affected by mortality since 1984. Areas experiencing low-severity mortality increased more strongly than areas affected by stand-replacing mortality events. Changes in climate and land-use are likely causes of large-scale forest mortality increase. Our findings reveal profound changes in recent forest dynamics with important implications for carbon storage and biodiversity conservation, highlighting the importance of improved monitoring of forest mortality.},
+  langid = {english},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\KYSJMIWI\\Senf et al. - 2018 - Canopy mortality has doubled in Europe’s temperate.pdf;C\:\\Users\\Me\\Zotero\\storage\\YEWZ5ERS\\s41467-018-07539-6.html}
 }
 
 @article{senfCanopyMortalityHas2018a,
